chore: gitignore models + add README guidance; commit latest app updates

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ __pycache__/
 Data/
 notebooks/.ipynb_checkpoints/
 *.pth
+ 
+# Ignore root models folder and serialized model artifacts
+ /models/
+ *.pkl
