--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 pydantic[email]==2.5.0
 python-multipart==0.0.6
+# Machine Learning
+tensorflow>=2.13.0
+Pillow>=10.0.0
+numpy>=1.24.0
